# KeyboardMonitor

./: CMakeLists.txt
res/: RCa21828  km.rc
src/: HookProc.cxx  console.h  main.cpp  res.h  win32Notification.h
